--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,22 @@ img {
 }
 
 /* header  */
+
   header {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+  
     padding: 22px 0;
+
+    background: #fff;
+
+    transition: 0.2s linear;
+
+    box-shadow: 0px 0px 13px rgba(0, 0, 0, 0.13);
+    
+    z-index: 1000;
   }
 
 
@@ -174,6 +188,80 @@ img {
 
 }
 
+.hero__arrow--black {
+  visibility: hidden;
+  margin-left: 29px;
+}
+
+@media (max-width: 960px) {
+
+.hero {
+  padding-top: 200px;
+  height: 1136px;
+
+  background: url("../img/Image\ Plonq\ 500-960.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+  }
+
+ .hero__inner {
+   padding: 0;
+ }
+
+ .hero__logo {
+   width: 200px;
+ }
+
+ .hero__content {
+   display: flex;
+   justify-content: center;
+ }
+
+ .hero__text {
+  font-size: 25px;
+  line-height: 32px;
+  max-width: none;
+
+  text-align: center;
+ }
+
+ .hero__buttons {
+   justify-content: center;
+   margin-top: 650px; 
+  }
+
+  .hero__details {
+    color: #264F53;
+  }
+
+  .hero__btn  {
+    margin-left: 50px;
+    padding: 15px 30px;
+    border: 1px solid #264F53;
+
+    color: #264F53;
+  }
+
+  .hero__btn:hover {
+    background: #000;
+
+    color: #fff;
+    
+  } 
+
+  .hero__arrow {
+    display: none;
+  }
+
+  .hero__arrow--black{
+    visibility: visible;
+  }
+
+}
+
+
 
 
 
@@ -231,8 +319,6 @@ img {
   color: #C8BB93;
 }
 
-
-
  
 @media (max-width: 960px) {
     .blonq {
@@ -256,8 +342,15 @@ img {
 
     .blonq__buttons {
       position: absolute;
+      top: 90%;
       bottom: 0;
-      margin-left: 120px;
+      
+      
+
+      display: flex;
+      justify-content: center;
+      align-items: center ;
+      margin-left: 50px;
       
     }
 
@@ -269,6 +362,7 @@ img {
      width: 100%;
      
    }
+
   }
 
 
@@ -355,6 +449,15 @@ img {
     background: #000;
   
 }
+
+
+@media (max-width: 470px) {
+  .blonq__card {
+    justify-content: center;
+    padding: 40px 0;
+  }
+}
+
 /* blonq-products//  */
 
 /* lcoat  */
@@ -479,6 +582,42 @@ img {
 .product__arrow {
   margin-left: 16px;
 }
+
+
+@media (max-width: 960px) {
+  .product__inner {
+    justify-content: center;
+  }
+}
+
+
+@media (max-width: 700px) {
+  .product__content {
+    margin-left: 20px;
+  }
+
+  .product__card {
+    padding: 0 15px;
+  }
+}
+
+@media (max-width: 376px) {
+  .product__img {
+    width: 100px;
+    margin-left: 20px;
+  }
+
+  .product__img-2 {
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 1352px)  {
+  .product__inner {
+  justify-content: center;
+  }
+}
+
 /* products .. */
 
 /* footer */
@@ -486,6 +625,8 @@ img {
 .footer {
   margin-top: 350px;
 }
+
+
 
 
 
@@ -677,6 +818,44 @@ img {
   color: #AAAAAA;
 }
 
+
+@media (max-width: 666px) {
+  .footer__logo {
+    display: none;
+  }
+
+  .form__email {
+    width: 137px;
+  }
+
+  .footer__list {
+    width: 50%;
+  }
+
+  .footer__btn {
+    width: 102px;
+  }
+
+  .footer__left {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+    
+  }
+
+  .footer__left-inner {
+    margin-left: 30px;
+  }
+}
+
+@media (max-width: 366px) {
+  .footer__language {
+    margin-top: 30px;
+  }
+}
+
+
+
 /* footer // */
 
 /* blonq500 */
@@ -771,7 +950,7 @@ img {
   line-height: 66px;
 
   margin-right: 32px;
-  
+
 }
 
 
@@ -982,7 +1161,7 @@ img {
 .update__title {
   font-size: 40px;
   line-height: 45px;
-
+  
 }
 
 
@@ -990,9 +1169,206 @@ img {
   max-width: 416px;
   margin: 50px 0;
 }
-
-
-
-
-
 /* update // */
+
+/* device */
+
+.device {
+  margin-top: 160px;
+}
+
+.device__inner {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.device__title {
+  font-size: 40px;
+  line-height: 45px;
+}
+
+.device___text {
+  max-width: 344px;
+
+  margin-top: 28px;
+
+  font-size: 15px;
+  line-height: 21px;
+}
+
+.device__content {
+  margin: 50px 0;
+}
+
+
+/* device //*/
+
+/* capsule */
+
+.capsule {
+  margin-top: 250px;
+}
+
+.capsule__inner {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.capsule__content {
+  margin: 60px 0;
+}
+
+.capsule__title {
+  font-size: 40px;
+  line-height: 45px;
+}
+
+
+.capsule__text {
+  font-size: 15px;
+  line-height: 21px;
+
+  max-width: 296px;
+
+  margin-top: 28px;
+}
+
+
+/* capsule //*/
+
+
+/* device-plonq500 */
+
+.device-container {
+  background: #F9F9F9;
+  padding: 250px 0;
+
+  margin-top: 200px;
+}
+
+.device-plonq500__inner {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+
+  padding: 0 15px;
+}
+
+.device-plonq500-title {
+  font-size: 40px;
+  line-height: 45px;
+
+  margin-bottom: 28px;
+}
+
+.device-plonq500-text {
+  font-size: 15px;
+  line-height: 21px;
+
+  max-width: 360px;
+}
+
+
+.device-plonq500-content {
+  margin: 50px 0;
+}
+
+/* device-plonq500 //*/
+
+/* compound */
+
+
+.compound {
+  margin-top: 200px;
+}
+
+
+.compound__title {
+  font-size: 40px;
+  line-height: 45px;
+
+}
+
+.compound__list {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+
+  margin: 0 -15px;
+}
+
+.compound__item {
+  margin: 40px 0;
+  padding: 0 15px;
+
+  transition: 0.2s linear;
+}
+
+.compound__item:hover {
+  transform: translateY(-15px);
+}
+
+.compound__item-title {
+  font-size: 23px;
+  line-height: 28px;
+
+  margin-bottom: 58px;
+
+  color: #C8BB93;
+}
+
+.compound__text {
+  max-width: 250px;
+}
+
+.compound__list {
+  margin-top: 100px;
+}
+
+
+/* compound //*/
+
+/* certificate */
+
+.certificate {
+  margin-top: 260px;
+}
+
+.certificate__title {
+  display: flex;
+  justify-content: space-evenly;
+
+  padding: 0 15px;
+
+  font-size: 40px;
+  line-height: 45px;
+}
+
+.certificate-container {
+  background: #F9F9F9;
+  padding: 100px 0;
+}
+
+.certificate__inner {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  margin-top: 65px;
+}
+
+.certificate__img{
+  padding: 0 15px;
+
+  margin: 40px 0;
+}
+
+
+
+
+
+/* certificate // */
